--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@ section {
     overflow-x: hidden;
 }
 :root {
-    --Sniglet-font:"Sniglet";
-    --Rubik:"Rubik";
-    --Patua:"Patua One";
+    --Sniglet-font:"Sniglet", cursive;
+    --Rubik:"Rubik", cursive;
+    --Patua:"Patua One", cursive;
     --light-black:#2e2c2caf;
     --bggradient:linear-gradient(to bottom, #dd2476, #ff512f);
     --light-grey:rgba(255,255,255,0.815)
